# tfdocs

./: .gitignore  .terraform.lock.hcl  .test.tfdocs.db  env.auto.tfvars  flake.nix  justfile  package-lock.json  package.json  pyproject.toml  readme.md  result  test_data.tf
.github/actions/commit/: action.yaml
.github/actions/just/: action.yaml
.github/actions/nix-setup/: action.yaml
.github/workflows/: build-cache.yaml  dev-merge.yaml  dev-pr.yaml  sync-env.yaml  tf-plan.yaml
.husky/: commit-msg  pre-commit
docs/: change-management-and-approval.md  cli-interface-design.md
envs/: .terraform.lock.hcl  backend.tf.json  backend_manager.tf  dev-environment.yaml
infra/: backend.tf.json  env.tf.json  main.tf  plan
tests/: .terraform.lock.hcl  test_data.tf  test_schemas.json
tfdocs/: __init__.py  cli.py  logging.py  test_cli.py  test_logging.py  test_main.py  test_utils.py  utils.py
tfdocs/db/: __init__.py  args.py  handler.py  init.py  sync.py  tables.py  test_db_init.py  test_db_sync.py  test_handler.py
tfdocs/logging/: __init__.py  setup.py  test_logging.py  test_setup.py  test_watch_logs.py  watch.py  watch_logs.py  watcher.py
tfdocs/models/: attribute.py  block.py  test_attribute.py  test_block.py  test_lazy_entity.py  test_types.py
tfdocs/models/blocks/: provider.py  test_provider.py
tfdocs/views/: app.py  component_viewer.py  layout.py  list.py  special.py  switcher.py  viewer.py
tfdocs/views/special_panes/: provider.py
tfdocs/views/styles/: component_viewer.tcss
