[tool.poetry]
name = "tfdocs"
version = "0.1.0"
description = ""
authors = ["acrease <alex@crease.sh>"]
readme = "readme.md"
packages = [{include = "tfdocs"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s"
testpaths = [
    "tests",
    "tfdocs/**/test_*.py",
]
# asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
ignore_missing_imports = true

